# tgcrypto

./: pyproject.toml  setup.py
.github/workflows/: wheels.yml
tgcrypto/: aes256.c  aes256.h
